残骸を同期

--- a/pg/入館許可アプリ/受付/受付.html
+++ b/pg/入館許可アプリ/受付/受付.html
@@ -8,6 +8,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>総合受付</title>
+  <!-- システム設定読み込み -->
+  <script src="../システム設定.js"></script>
   <style>
     /* リセット */
     * {
@@ -114,5 +116,18 @@
         <a id="reception-link" href="#" class="btn-other">その他の方は</br>こちら</a>
       </div>
     </div>
+
+    <script>
+      // システム設定から各画面のURLを設定
+      document.getElementById('qr-reader-link').addEventListener('click', function(e) {
+        e.preventDefault();
+        window.location.href = SYSTEM_CONFIG.SITE_INFO.QR_READER.URL;
+      });
+
+      document.getElementById('reception-link').addEventListener('click', function(e) {
+        e.preventDefault();
+        window.location.href = SYSTEM_CONFIG.SITE_INFO.UNSCHEDULED_VISIT.URL;
+      });
+    </script>
   </body>
 </html>
