--- a/pg/テプシス/output/派遣者/htmls/01_【表示制御】派遣者登録HTML.html
+++ b/pg/テプシス/output/派遣者/htmls/01_【表示制御】派遣者登録HTML.html
@@ -1,15 +1,15 @@
-        <div id="fn-kitchen-car" class="sdt-kitchen-car">
-            <!-- キッチンカー選択画面全体ラップ -->
-            <div class="sdt-kitchen-car-wrap">
+        <div id="fn-dispatch" class="sdt-dispatch">
+            <!-- 派遣者選択画面全体ラップ -->
+            <div class="sdt-dispatch-wrap">
 
                 <!-- 画面タイトル -->
-                <h2 class="sdt-kitchen-car-title">
-                    <span class="sdt-kitchen-car-title__text">キッチンカー登録</span>
+                <h2 class="sdt-dispatch-title">
+                    <span class="sdt-dispatch-title__text">派遣者登録</span>
                 </h2>
 
                 <!-- 入力フォーム -->
-                <div class="sdt-kitchen-car-form">
-                    <form id="fn-kitchen-car-form" class="sdt-kitchen-car-form__area">
+                <div class="sdt-dispatch-form">
+                    <form id="fn-dispatch-form" class="sdt-dispatch-form__area">
                         <!-- 店舗 -->
                         <div class="sdt-form-box sdt-form-shop">
                             <label class="sdt-form-label" for="fn-formShop">
@@ -25,37 +25,35 @@
                             </div>
                         </div>
 
-                        <!-- 開催期間 -->
-                        <div class="sdt-form-box sdt-form-period">
-                            <label class="sdt-form-label" for="fn-formDateFrom">
-                                <span class="sdt-text">開催期間</span>
+                        <!-- 日付（単日） -->
+                        <div class="sdt-form-box sdt-form-date">
+                            <label class="sdt-form-label" for="fn-formDate">
+                                <span class="sdt-text">日付</span>
                                 <span class="sdt-required">*</span>
                             </label>
                             <div class="sdt-form-inputArea sdt-form-inputArea--date">
-                                <input id="fn-formDateFrom" type="date" class="sdt-input sdt-input--date">
-                                <span class="sdt-date-separator">〜</span>
-                                <input id="fn-formDateTo" type="date" class="sdt-input sdt-input--date">
+                                <input id="fn-formDate" type="date" class="sdt-input sdt-input--date">
                             </div>
                         </div>
                     </form>
                 </div>
 
-                <!-- キッチンカー一覧テーブル -->
-                <div id="sdt-kitchen-car-table" class="sdt-kitchen-car-table">
-                    <div class="sdt-kitchen-car-table__wrap">
+                <!-- 派遣者一覧テーブル -->
+                <div id="sdt-dispatch-table" class="sdt-dispatch-table">
+                    <div class="sdt-dispatch-table__wrap">
                         <table class="sdt-table">
                             <thead class="sdt-table__head">
                                 <tr class="sdt-table__row">
-                                    <th class="sdt-table__cell sdt-table__cell-head" style="width:50%;">キッチンカー</th>
-                                    <th class="sdt-table__cell sdt-table__cell-head" style="width:35%;">使用状況</th>
+                                    <th class="sdt-table__cell sdt-table__cell-head" style="width:50%;">派遣者</th>
+                                    <th class="sdt-table__cell sdt-table__cell-head" style="width:35%;">派遣状況</th>
                                     <th class="sdt-table__cell sdt-table__cell-head" style="width:15%;">選択</th>
                                 </tr>
                             </thead>
                             <!-- ループ開始 -->
                             <tbody class="sdt-table__body">
                                 <tr class="sdt-table__row fn-tableColumn-loop" style="display:none;">
-                                    <td class="sdt-table__cell" data-target="fn-table-name">[キッチンカー名が入ります]</td>
-                                    <td class="sdt-table__cell" data-target="fn-table-status">[使用状況が入ります]</td>
+                                    <td class="sdt-table__cell" data-target="fn-table-name">[派遣者名が入ります]</td>
+                                    <td class="sdt-table__cell" data-target="fn-table-status">[派遣状況が入ります]</td>
                                     <td class="sdt-table__cell" data-target="fn-table-checkbox">
                                         <input type="checkbox" class="sdt-checkbox fn-pick" value="">
                                     </td>
@@ -66,22 +64,10 @@
                     </div>
                 </div>
 
-                <!-- その他詳細 -->
-                <div class="sdt-kitchen-car-note">
-                    <div class="sdt-form-box sdt-form-note">
-                        <label class="sdt-form-label" for="fn-formNote">
-                            <span class="sdt-text">その他詳細</span>
-                        </label>
-                        <div class="sdt-form-inputArea">
-                            <input id="fn-formNote" type="text" class="sdt-input" placeholder="">
-                        </div>
-                    </div>
-                </div>
-
                 <!-- アクションボタン -->
                 <div class="sdt-form-buttonArea">
                     <button class="sdt-button sdt-button--primary" type="button" id="fn-submitButton">
-                        <span class="sdt-button__text">キッチンカー登録</span>
+                        <span class="sdt-button__text">派遣者登録</span>
                     </button>
                     <button class="sdt-button sdt-button--secondary" type="button" id="fn-cancelButton">
                         <span class="sdt-button__text">キャンセル</span>
