--- a/pg/テプシス/output/派遣者/htmls/01_【表示制御】派遣者登録HTML.html
+++ b/pg/テプシス/output/派遣者/htmls/01_【表示制御】派遣者登録HTML.html
@@ -69,6 +69,9 @@
                     <button class="sdt-button sdt-button--primary" type="button" id="fn-submitButton">
                         <span class="sdt-button__text">派遣者登録</span>
                     </button>
+                    <button class="sdt-button sdt-button--danger" type="button" id="fn-deleteButton" style="display:none;">
+                        <span class="sdt-button__text">削除</span>
+                    </button>
                     <button class="sdt-button sdt-button--secondary" type="button" id="fn-cancelButton">
                         <span class="sdt-button__text">キャンセル</span>
                     </button>
