活性コントロール

--- a/pg/テプシス/output/キッチンカー/htmls/01_【表示制御】キッチンカー登録HTML.html
+++ b/pg/テプシス/output/キッチンカー/htmls/01_【表示制御】キッチンカー登録HTML.html
@@ -32,9 +32,9 @@
                                 <span class="sdt-required">*</span>
                             </label>
                             <div class="sdt-form-inputArea sdt-form-inputArea--date">
-                                <input id="fn-formDateFrom" type="date" class="sdt-input sdt-input--date">
+                                <input id="fn-formDateFrom" type="date" class="sdt-input sdt-input--date" disabled>
                                 <span class="sdt-date-separator">〜</span>
-                                <input id="fn-formDateTo" type="date" class="sdt-input sdt-input--date">
+                                <input id="fn-formDateTo" type="date" class="sdt-input sdt-input--date" disabled>
                             </div>
                         </div>
                     </form>
