右上ボタンの完成

--- a/pg/テプシス/output/イベント当日/htmls/01_【表示制御】イベント当日HTML.html
+++ b/pg/テプシス/output/イベント当日/htmls/01_【表示制御】イベント当日HTML.html
@@ -15,23 +15,27 @@
                     </div>
                     <div class="sdt-event-info__body">
                         <div class="sdt-info-item">
-                            <span class="sdt-info-label">カテゴリー：</span>
+                            <span class="sdt-info-label">カテゴリー</span>
                             <span class="sdt-info-value" id="fn-infoCategory">-</span>
                         </div>
                         <div class="sdt-info-item">
-                            <span class="sdt-info-label">イベント名・出店名：</span>
+                            <span class="sdt-info-label">イベント名・出店名</span>
                             <span class="sdt-info-value" id="fn-infoEventName">-</span>
                         </div>
                         <div class="sdt-info-item">
-                            <span class="sdt-info-label">開催者or依頼主：</span>
+                            <span class="sdt-info-label">開催者or依頼主</span>
                             <span class="sdt-info-value" id="fn-infoOrganizer">-</span>
                         </div>
                         <div class="sdt-info-item">
-                            <span class="sdt-info-label">担当エリア：</span>
+                            <span class="sdt-info-label">開催エリア</span>
                             <span class="sdt-info-value" id="fn-infoArea">-</span>
                         </div>
                         <div class="sdt-info-item">
-                            <span class="sdt-info-label">開催期間：</span>
+                            <span class="sdt-info-label">開催エリア詳細</span>
+                            <span class="sdt-info-value" id="fn-infoAreaDetail">-</span>
+                        </div>
+                        <div class="sdt-info-item">
+                            <span class="sdt-info-label">開催期間</span>
                             <span class="sdt-info-value" id="fn-infoPeriod">-</span>
                         </div>
                     </div>
