なまでーた出力レビュー

--- a/pg/テプシス/output/生データ・加工データ出力/htmls/02_【表示制御】生データ・加工データHTML.html
+++ b/pg/テプシス/output/生データ・加工データ出力/htmls/02_【表示制御】生データ・加工データHTML.html
@@ -51,7 +51,7 @@
                             </div>
                             <!-- ボタン -->
                             <div class="sdt-processing-form__footer">
-                                <button class="fn-sdt-modal-export sdt-button" id="fn-event-export" type="search" onclick="">
+                                <button class="fn-sdt-modal-export sdt-button" id="fn-event-export" type="button">
                                     <span class="sdt-button__text">出力</span>
                                 </button>
                             </div>
@@ -107,7 +107,7 @@
                             </div>
                             <!-- ボタン -->
                             <div class="sdt-processing-form__footer">
-                                <button class="fn-sdt-modal-export sdt-button" id="fn-event-store-export" type="search" onclick="">
+                                <button class="fn-sdt-modal-export sdt-button" id="fn-event-store-export" type="button">
                                     <span class="sdt-button__text" >出力</span>
                                 </button>
                             </div>
@@ -162,7 +162,7 @@
                             </div>
                             <!-- ボタン -->
                             <div class="sdt-processing-form__footer">
-                                <button class="fn-sdt-modal-export sdt-button" id="fn-event-work-export" type="search" onclick="">
+                                <button class="fn-sdt-modal-export sdt-button" id="fn-event-work-export" type="button">
                                     <span class="sdt-button__text" >出力</span>
                                 </button>
                             </div>
@@ -217,7 +217,7 @@
                             </div>
                             <!-- ボタン -->
                             <div class="sdt-processing-form__footer">
-                                <button class="fn-sdt-modal-export sdt-button" id="fn-event-weather-export" type="search" onclick="">
+                                <button class="fn-sdt-modal-export sdt-button" id="fn-event-weather-export" type="button">
                                     <span class="sdt-button__text" >出力</span>
                                 </button>
                             </div>
@@ -489,7 +489,7 @@
                             </div>
                             <!-- ボタン -->
                             <div class="sdt-processing-form__footer">
-                                <button class="fn-sdt-modal-export sdt-button" id="fn-processed-data-export" type="search" onclick="">
+                                <button class="fn-sdt-modal-export sdt-button" id="fn-processed-data-export" type="button">
                                     <span class="sdt-button__text">出力</span>
                                 </button>
                             </div>
