ラベル変更

--- a/pg/テプシス/output/イベント当日/htmls/01_【表示制御】イベント当日HTML.html
+++ b/pg/テプシス/output/イベント当日/htmls/01_【表示制御】イベント当日HTML.html
@@ -23,7 +23,7 @@
                             <span class="sdt-info-value" id="fn-infoEventName">-</span>
                         </div>
                         <div class="sdt-info-item">
-                            <span class="sdt-info-label">開催者or依頼主</span>
+                            <span class="sdt-info-label">事業者名or店舗名</span>
                             <span class="sdt-info-value" id="fn-infoOrganizer">-</span>
                         </div>
                         <div class="sdt-info-item">
