文字数制限

--- a/pg/テプシス/output/イベント当日/htmls/01_【表示制御】イベント当日HTML.html
+++ b/pg/テプシス/output/イベント当日/htmls/01_【表示制御】イベント当日HTML.html
@@ -161,7 +161,7 @@
                                         <td class="sdt-table__cell" data-target="fn-work-start">14:03</td>
                                         <td class="sdt-table__cell" data-target="fn-work-end">16:23</td>
                                         <td class="sdt-table__cell" data-target="fn-work-staff">担当者名</td>
-                                        <td class="sdt-table__cell" data-target="fn-work-note">自由記入内容</td>
+                                        <td class="sdt-table__cell sdt-table__cell--note" data-target="fn-work-note">自由記入内容</td>
                                         <td class="sdt-table__cell">
                                             <button class="sdt-button sdt-button--secondary sdt-button--small fn-work-edit" data-record-id="">編集</button>
                                             <button class="sdt-button sdt-button--secondary sdt-button--small fn-work-copy" data-record-id="">コピー</button>
